[package]
name = "screeps-machine"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.16", features = ["extra-traits", "full", "fold", "parsing", "proc-macro"] }
quote = "1.0.2"
case = "^1.0"
proc-macro2 = {}