[package]
name = "screeps-machine"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.16", features = ["extra-traits", "full", "fold", "parsing"] }
quote = "1.0.2"
proc-macro2 = "1"
case = "^1.0"

[lib]
proc-macro = true